Fix nav color contrast and heading order issues (#48)

--- a/client/app/bundles/App/Components/Index.scss
+++ b/client/app/bundles/App/Components/Index.scss
@@ -7,7 +7,7 @@
     height: 100%;
   }
 
-  .vertical-menu h2 {
+  .vertical-menu h1 {
     color: black;
     display: block;
     padding: 12px;
